Fix word spacing in the `TreasureHuntDifficultyComponent`

--- a/src/WebApp.Client/Components/Elements/TreasureHuntDifficultyComponent.razor.css
+++ b/src/WebApp.Client/Components/Elements/TreasureHuntDifficultyComponent.razor.css
@@ -39,6 +39,10 @@
     font-size: 10px;
 }
 
+.preserve-whitespace {
+    white-space: pre;
+}
+
 @media (min-width: 576px) {
     .grid-container {
         column-gap: 16px;
